--- a/style.css
+++ b/style.css
@@ -1,23 +1,44 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    font:bold 12px Arial, Helvetica, sans-serif;
+    font: bold 12px Arial, Helvetica, sans-serif;
     background-color: white;
+    flex-direction: column;
 }
 
-.menu{
+#counter-container {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#counter {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+#clickButton {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: aquamarine;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.menu {
     display: flex;
     justify-content: center;
     width: 100%;
     max-height: 50px;
-    margin-top: 90%;
 }
+
 .menu ul {
     position: fixed;
     bottom: 0;
@@ -28,7 +49,8 @@ body{
     justify-content: center;
     padding-bottom: 20px;
 }
-.menu ul a{
+
+.menu ul a {
     color: black;
     display: flex;
     align-items: center;
@@ -36,13 +58,13 @@ body{
     padding-bottom: 30px;
     text-decoration: none;
 }
+
 .menu ul li {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 70px;
     height: 20px;
-    margin-left: 10px;
     padding-top: 30px;
     border-radius: 5px;
     background-color: aquamarine;
